Ajustes no académico

--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -30,7 +30,7 @@
 
   <div class="container-fluid">
     <section>
-      <ol class="breadcrumb clearfix">
+      <ol class="breadcrumb blue-ctj">
         <li><a href="#">Acadêmico</a></li>
         <li class="ml-xs mr-xs"> /</li>
         <li class="active">Grupos</li>
@@ -325,10 +325,6 @@
               });
     });
   });
-</script>
-
-<script>
-
 </script>
 </body>
 </html>
