--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -28,7 +28,7 @@
 
   <div class="container-fluid">
     <section>
-      <ol class="breadcrumb clearfix">
+      <ol class="breadcrumb blue-ctj">
         <li><a href="#">Acadêmico</a></li>
         <li class="ml-xs mr-xs"> /</li>
         <li class="active">Unidades</li>
@@ -71,7 +71,7 @@
 
             <section role="tabpanel" class="tab-pane fade in active" id="tabs-servicos-tab-1">
               <section>
-                <div class="row">
+                <div class="row mb-md">
                   <div class="col-sm-9">
                     <div class="form-control-wrapper form-control-icon-right">
                       <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
@@ -87,7 +87,7 @@
                     </p>
                   </div>
                 </div>
-                <div id="collapse-busca-one" class="collapse mt-md" role="tabpanel"
+                <div id="collapse-busca-one" class="collapse" role="tabpanel"
                      aria-labelledby="collapse-busca-one"
                      aria-expanded="true">
                   <section class="card">
