--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -28,7 +28,7 @@
 
   <div class="container-fluid">
     <section>
-      <ol class="breadcrumb clearfix">
+      <ol class="breadcrumb blue-ctj">
         <li><a href="#">Acadêmico</a></li>
         <li class="ml-xs mr-xs"> /</li>
         <li class="active">Níveis</li>
@@ -71,24 +71,7 @@
             <div class="tab-content">
               <section role="tabpanel" class="tab-pane fade in active" id="tabs-cursos-tab-1">
                 <section>
-                  <div class="row">
-                    <div class="col-sm-9">
-                      <div class="form-control-wrapper form-control-icon-right">
-                        <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
-                        <i class="fa fa-search"></i>
-                      </div>
-                    </div>
-                    <div class="col-sm-3">
-                      <p class="mt-sm">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one"
-                           aria-expanded="true"
-                           aria-controls="collapseOne">
-                          <i class="fa fa-search-plus"
-                             aria-hidden="true"></i> Busca avançada</a>
-                      </p>
-                    </div>
-                  </div>
-                  <div id="collapse-busca-one" class="collapse mt-md" role="tabpanel"
+                  <div id="collapse-busca-one" class="collapse mb-md" role="tabpanel"
                        aria-labelledby="collapse-busca-one"
                        aria-expanded="true">
                     <div class="card">
@@ -152,6 +135,24 @@
                       </div>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="col-sm-9">
+                      <div class="form-control-wrapper form-control-icon-right">
+                        <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
+                        <i class="fa fa-search"></i>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <p class="mt-sm">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one"
+                           aria-expanded="true"
+                           aria-controls="collapseOne">
+                          <i class="fa fa-search-plus"
+                             aria-hidden="true"></i> Busca avançada</a>
+                      </p>
+                    </div>
+                  </div>
+
                 </section>
 
 
