--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>CTJ Flow</title>
+  <title>CTJFlow</title>
 
   <link href="../../img/favicon.ico" rel="shortcut icon">
 
@@ -96,16 +96,9 @@
                   </fieldset>
                 </div>
                 <div class="col-sm-6">
-                  <label class="form-label semibold" for="">Status do curso</label>
-                  <div class="form-group mt-sm">
-                    <div class="btn-group btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Ativo
-                      </label>
-                      <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Inativo
-                      </label>
-                    </div>
+                  <div class="checkbox-toggle mt-lg">
+                    <input type="checkbox" id="check-toggle-1"/>
+                    <label class="form-label" for="check-toggle-1">Ativo</label>
                   </div>
                 </div>
               </div>
