Reajustes em todas as telas

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -291,16 +291,9 @@
               </div>
               <div class="row divider-top">
                 <div class="col-sm-4">
-                  <label class="form-label semibold" for="">Curso especial</label>
-                  <div class="form-group">
-                    <div class="btn-group btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-secondary-outline active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Sim
-                      </label>
-                      <label class="btn btn-secondary-outline">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Não
-                      </label>
-                    </div>
+                  <div class="checkbox-toggle mt-lg">
+                    <input type="checkbox" id="check-toggle-esp"/>
+                    <label class="form-label" for="check-toggle-esp">Curso especial</label>
                   </div>
                 </div>
                 <div class="col-lg-4">
