--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -266,13 +266,13 @@
                     <input type="number" class="form-control" id="" placeholder="00">
                   </div>
                   <div class="col-sm-4">
-                    <div class="checkbox-toggle">
+                    <div class="checkbox-toggle mt-lg">
                       <input type="checkbox" id="check-RepTest">
                       <label for="check-RepTest">Replacement test</label>
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="checkbox-toggle">
+                    <div class="checkbox-toggle mt-lg">
                       <input type="checkbox" id="check-Certificado">
                       <label for="check-Certificado">Certificado</label>
                     </div>
