--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -31,7 +31,7 @@
       <ol class="breadcrumb blue-ctj">
         <li><a href="#">Acadêmico</a></li>
         <li class="ml-xs mr-xs"> /</li>
-        <li class="active">Listagem de serviços</li>
+        <li class="active">Serviços</li>
         <li style="float:right;">
           <button class="btn btn-inline btn-secondary-outline btn-sm"><i class="fa fa-question-circle"
                                                                          aria-hidden="true"></i> Ajuda
@@ -100,11 +100,11 @@
                           <label class="form-label semibold" for="">Divulgação site</label>
                           <div class="form-group">
                             <div class="btn-group btn-group-sm" data-toggle="buttons">
-                              <label class="btn btn-secondary active">
+                              <label class="btn btn-secondary-outline active">
                                 <input type="radio" name="options" id="" autocomplete="off" checked="">
                                 Privado
                               </label>
-                              <label class="btn btn-secondary">
+                              <label class="btn btn-secondary-outline">
                                 <input type="radio" name="options" id="" autocomplete="off"> Publico
                               </label>
                             </div>
@@ -308,43 +308,35 @@
               </div>
               <div class="row mt-md divider-top">
                 <div class="col-sm-4">
-                  <label class="form-label semibold" for="">Divulgação no site</label>
-                  <div class="form-group mt-sm">
-                    <div class="btn-group btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Publico
-                      </label>
-                      <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Privado
-                      </label>
-                    </div>
+                  <div class="checkbox-toggle mt-lg">
+                    <input type="checkbox" id="check-toggle-Divulg"/>
+                    <label class="form-label" for="check-toggle-Divulg">Divulgação no site</label>
                   </div>
                 </div>
                 <div class="col-sm-4">
-                  <label class="form-label semibold" for="">Status</label>
-                  <div class="form-group mt-sm">
-                    <div class="btn-group btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Ativo
-                      </label>
-                      <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Inativo
-                      </label>
-                    </div>
+                  <div class="checkbox-toggle mt-lg">
+                    <input type="checkbox" id="check-toggle-sit"/>
+                    <label class="form-label" for="check-toggle-sit">Ativo</label>
                   </div>
                 </div>
                 <div class="col-sm-4">
-                  <label class="form-label semibold" for="">Certificado</label>
-                  <div class="form-group mt-sm">
-                    <div class="btn-group btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Sim
-                      </label>
-                      <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Não
-                      </label>
-                    </div>
+                  <div class="checkbox-toggle mt-lg">
+                    <input type="checkbox" id="check-toggle-cert"/>
+                    <label class="form-label" for="check-toggle-cert">Certificado</label>
                   </div>
+                </div>
+              </div>
+              <div class="row divider-top">
+                <div class="col-sm-12">
+                  <label class="form-label semibold" for="">Curso(s) <span
+                          class="semibold text-danger h4">*</span></label>
+                  <select class="select2" multiple="multiple">
+                    <option>Crianças</option>
+                    <option>Adolescentes</option>
+                    <option>Jovens e adultos</option>
+                    <option>Cursos online</option>
+                    <option>Cursos especiais</option>
+                  </select>
                 </div>
               </div>
               <div class="row divider-top pb-md">
@@ -391,7 +383,7 @@
           <div class="card-block">
             <div class="row">
               <div class="col-md-4">
-                <label class="form-label semibold">Status</label>
+                <label class="form-label semibold">Situação</label>
                 <p class="text-success"><i class="fa fa-check"
                                            aria-hidden="true"></i>
                   <strong>Curso ativo</strong></p>
@@ -432,131 +424,6 @@
                   (ETS). Além disso, a partir de 2016, funcionaremos como local de provas para o exame IELTS, oferecido
                   pelo
                   Conselho Britânico.</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="card card-default">
-          <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-list mr-xs" aria-hidden="true"></i> Níveis</h5>
-          </header>
-          <div class="card-block">
-            <div class="row">
-              <div class="col-sm-12">
-
-                <section class="widget widget-accordion mt-md" id="accordion" role="tablist"
-                         aria-multiselectable="true">
-                  <article class="panel">
-                    <div class="panel-heading" role="tab" id="headingOne">
-                      <a data-toggle="collapse"
-                         data-parent="#accordion"
-                         href="#collapseOne"
-                         aria-expanded="false"
-                         aria-controls="collapseOne">
-                        Nível A1
-                        <i class="font-icon font-icon-arrow-down"></i>
-                      </a>
-                    </div>
-                    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                      <div class="panel-collapse-in">
-                        <div class="row">
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Unidades</label>
-                              <p>3 unidades</p>
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Nota média</label>
-                              <p>00,00</p>
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Nível</label>
-                              <p>TAG</p>
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Avaliação</label>
-                              <p>Notas</p>
-                            </fieldset>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Material didático</label>
-                              <p><img class="img-circle-xs" src="../../img/cursos/kids/hooray-a1.jpg"> Hooray! A –
-                                Student’s
-                                Book
-                                – Helbling Languages</p>
-                            </fieldset>
-                          </div>
-
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-
-                  <article class="panel">
-                    <div class="panel-heading" role="tab" id="heading-2">
-                      <a data-toggle="collapse"
-                         data-parent="#accordion"
-                         href="#collapse-2"
-                         aria-expanded="false"
-                         aria-controls="collapse-2">
-                        Nível A2
-                        <i class="font-icon font-icon-arrow-down"></i>
-                      </a>
-                    </div>
-                    <div id="collapse-2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-2">
-                      <div class="panel-collapse-in">
-                        <div class="row">
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Unidades</label>
-                              <p>3 unidades</p>
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Nota média</label>
-                              <p>00,00</p>
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Nível</label>
-                              <p>TAG</p>
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-3">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Avaliação</label>
-                              <p>Notas</p>
-                            </fieldset>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <fieldset class="form-group">
-                              <label class="form-label semibold" for="exampleInput">Material didático</label>
-                              <p><img class="img-circle-xs" src="../../img/cursos/kids/hooray-a1.jpg"> Hooray! A –
-                                Student’s
-                                Book
-                                – Helbling Languages</p>
-                            </fieldset>
-                          </div>
-
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </section>
               </div>
             </div>
           </div>
